# redesigned-pancake

./: .gitignore  COMMITMSG.txt  README.md  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.yml
artifacts/: scan-report.json  scan-summary.md
backend/: Dockerfile  coverage  go.mod  go.sum
docs/: ATTESTATION.md  AUDIT_BUNDLE.md  CLIENT_GUIDE.md  COGNITIVE_FIREWALL.md  CONTENT_MIGRATION.md  DEVICE_ATTESTATION_MTLS.md  ENTERPRISE.md  FEDERATION.md  FIRST_TIME_GUIDE.md  INTEGRATIONS_WOOCOMMERCE.md  ROADMAP.md  RUNBOOKS.md  SDK_CODEGEN.md  SECURITY.md  SPICEDB.md  SSO_SCIM.md  TRUST_TOKENS.md  TRYIT_CHARTS.md
frontend/: Dockerfile  eslint.config.js  package-lock.json  package.json  playwright.config.ts  playwright.screens.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
logs/: admin-health.json
scripts/: aura-quickstart.ps1  backend-smoke.ps1  check-supported-langs.ps1  deploy-staging.sh  dev-start-local.ps1  k6-verify.js  run-smokes.ps1  scan.ps1  scim-e2e.ps1  sdk-codegen-smoke.ps1  sdk-download-smoke.ps1  signed-download-smoke.ps1  simulate-risk-spike.ps1  smtp-test-smoke.ps1  start-backend-local.ps1  start-backend-with-signing.ps1  test-public-download.ps1  token-v1-smoke.ps1  token-v1-smoke.sh  vegeta-verify.ps1
sdks/python/: README.md  aura_sdk.py  aura_webhook.py  pyproject.toml
sdks/python/examples/: cognitive_firewall.py  offline_verify.py
sdks/python/examples/fastapi/: main.py  offline_middleware.py
sdks/python/tests/: test_trust_offline.py  test_vc_ldp.py
web/: README.md  next.config.mjs  next.config.ts  package.json  (+2 more)
(+435 files in other folders)
